--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -63,7 +63,7 @@
                             <div class="col-lg-4">
                                 <div class="mb-4">
                                     <label class="form-label">Regular Price</label>
-                                    <input placeholder="$" name="regularPrice" type="text" value="<%= product.regularPrice %>" class="form-control">
+                                    <input placeholder="₹" name="regularPrice" type="text" value="<%= product.regularPrice %>" class="form-control">
                                     <div id="regularPrice-error" class="error-message"></div>
                                 </div>
                             </div>
