--- a/views/user/my-order.ejs
+++ b/views/user/my-order.ejs
@@ -110,6 +110,7 @@
                     <p class="mb-0">SKU: <%= item.product.skuNumber %></p>
                     <!-- <p class="mb-0"><%= item.product.description %></p> -->
                     <p class="mb-0">Color: <%= item.product.color %></p>
+                    <p class="mb-0">Size: <%= item.size %></p>
                   </div>
                   <div class="col-md-2">
                     <p class="font-weight-bold mb-0">Price: ₹<%= item.regularPrice %></p>
