--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -64,7 +64,7 @@
                                 <div class="mb-4">
                                     <label class="form-label">Regular price</label>
                                     <br>
-                                    <input placeholder="$" name="regularPrice" type="text" class="form-control border">
+                                    <input placeholder="₹" name="regularPrice" type="text" class="form-control border">
                                     <div id="regularPrice-error" class="error-message"></div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                 <div class="mb-4">
                                     <label class="form-label">Sale price</label>
                                     <br>
-                                    <input placeholder="$" name="salePrice" type="text" class="form-control border">
+                                    <input placeholder="₹" name="salePrice" type="text" class="form-control border">
                                     <div id="salePrice-error" class="error-message"></div>
                                 </div>
                             </div>
