banner image change

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -186,13 +186,10 @@ img.img-fluid {
   <div class="container-fluid">
     <!-- Custom Video Container with increased height -->
     <div class="custom-video-container row justify-content-center">
-        <div class="col-12 col-md-12 col-lg-12">
-            <video  muted autoplay loop class="w-100">
-                <source src="/video/AIR MAX 97 __ Nike Ad (Unofficial) - Mudnag (1080p, h264, youtube).mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </div>
+      <div class="col-12 col-md-12 col-lg-12">
+          <img src="/video/nike-air-max-2.jpg" alt="Nike Banner" class="w-100">
+      </div>
+  </div>
     <div class="d-flex justify-content-center"></div>
     <h1 class="col-sl-6 col-md-8 col-lg-12 row justify-content-center text-center"> <strong>TOP OF THE WISHLIST KICKS</strong></h1>
     <h6 class="small_text_top">All-Time icons and sports-inspired gifts to make everyone on your list look and feel their best.</h6>
